# tof-bridge-planning-method

./: .gitignore  Dockerfile  MANIFEST.md  NOTICE.md  README.md  README_DE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
00_prepared_blocks/: README.md  demo_blocks.json
docs/: 01_overview.md  02_space_boundaries.md  03_chain.md  04_target_candidates.md  05_public_boundary.md  06_cli.md
examples/: 01_walkthrough.md
scripts/: demo_run.sh  reset_demo.sh
src/tof_bridge_planning/: cli.py  io_utils.py  pathing.py  pipeline.py  planning.py
tests/: test_candidate_logic.py  test_cli_parser.py
