[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tof-bridge-planning-method"
version = "0.1.0"
description = "Public bridge-planning baseline for sketches and target candidates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tof-bridge-plan = "tof_bridge_planning.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
